# grappa

./: .gitignore  README.md  TODO.md  pyproject.toml
src/torch_grappa/: __init__.py  grappa.py  profiler.py  sampling.py  solve.py  utils.py
tests/: test_grappa_2d.py  test_grappa_2d_batch.py  test_grappa_3d.py  test_grappa_index.py
tests/data/: im.pt  index_test.pt
